add js enhancements to ebooks

--- a/A_Connecticut_Yankee.html
+++ b/A_Connecticut_Yankee.html
@@ -2583,6 +2583,7 @@ and all will be forgiven.</p>
 </section>
 </section>
 </article>
-<!--script src="http://static.manuel-strehl.de/Software/ebook"></script-->
+<script src="jquery.js"></script>
+<script src="ebook.js"></script>
 </body>
 </html>
