--- a/A_Connecticut_Yankee.html
+++ b/A_Connecticut_Yankee.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html SYSTEM "about:legacy-compat">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US">
   <head>
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
