correct footnote in Treasure Island

--- a/Treasure_Island.html
+++ b/Treasure_Island.html
@@ -3638,10 +3638,9 @@ five of them will never run again.”</p>
 <p>“Five!” cried the captain. “Come, that’s better. Five against three
 leaves us four to nine. That’s better odds than we had at starting. We
 were seven to nineteen then, or thought we were, and that’s as bad to
-bear.”*</p>
-<p>*The mutineers were soon only eight in number, for the man shot by Mr.
+bear.”<span class="footnote"><span class="footnote-body">The mutineers were soon only eight in number, for the man shot by Mr.
 Trelawney on board the schooner died that same evening of his wound. But
-this was, of course, not known till after by the faithful party.</p>
+this was, of course, not known till after by the faithful party.</span></span></p>
 </section>
 </section>
 <section id="part_5">
