--- a/A_Connecticut_Yankee.html
+++ b/A_Connecticut_Yankee.html
@@ -14,7 +14,7 @@
     <meta name="dc.date"         content="2009-09-30" data-scheme="dc.W3CDTF" />
     <meta name="dc.issued"       content="1889" data-scheme="dc.W3CDTF" />
     <meta name="dc.language"     content="en-US" data-scheme="dc.RFC4646" />
-    <meta name="dc.spacial"      content="Wonderland" data-scheme="dc.TGN" />
+    <meta name="dc.spacial"      content="" data-scheme="dc.TGN" />
     <meta name="dc.rights"       content="The stylesheet is © 2009 Manuel Strehl and is subject to the CreativeCommons Attribution-Share Alike 3.0 license (Germany). The text is in the public domain." />
     <link rel="dc.identifier"    href="http://www.manuel-strehl.de/ebooks/A%20Connecticut%20Yankee" />
     <link rel="dc.tableofContents" href="#Table_of_Contents" />
