--- a/Alices_Adventures_in_Wonderland.html
+++ b/Alices_Adventures_in_Wonderland.html
@@ -1283,7 +1283,7 @@ soup, and seemed not to be listening, so she went on again:
 figures!’ And with that she began nursing her child again,
 singing a sort of lullaby to it as she did so, and giving it a
 violent shake at the end of every line:</p>
-<blockquote class="fixed slanted poem">
+<blockquote class="slanted fixed poem">
   <pre>‘Speak roughly to your little boy,&#xA;<!--
     -->  And beat him when he sneezes:&#xA;<!--
     --> He only does it to annoy,&#xA;<!--
@@ -1292,13 +1292,13 @@ violent shake at the end of every line:</p>
     --> <em>CHORUS</em></pre>
 </blockquote>
 <p>(In which the cook and the baby joined):—</p>
-<blockquote class="fixed slanted poem">
+<blockquote class="slanted fixed poem">
   <pre><em>‘Wow! wow! wow!’</em></pre>
 </blockquote>
 <p>While the Duchess sang the second verse of the song, she kept
 tossing the baby violently up and down, and the poor little thing
 howled so, that Alice could hardly hear the words:—</p>
-<blockquote class="fixed slanted poem">
+<blockquote class="slanted fixed poem">
   <pre>‘I speak severely to my boy,&#xA;<!--
     -->  I beat him when he sneezes;&#xA;<!--
     --> For he can thoroughly enjoy&#xA;<!--
