--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var disqus_url = 'http://boldewyn.github.com/ebooks/index.html';
 (function() {
 var dsq = document.createElement('script');
 dsq.type = 'text/javascript'; dsq.async = true;
-dsq.src = 'http://ebooks.disqus.com/embed.js';
+dsq.src = 'http://ebooks-gh.disqus.com/embed.js';
 (document.getElementsByTagName('head')[0] ||
  document.getElementsByTagName('body')[0]).appendChild(dsq);
 })();
