add Github to credits

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@ develop fast and consistently. It is published under the <abbr title="GNU Genera
   License">GPL</abbr> and the <abbr title="Masachussetts Institute of
 Technology">MIT</abbr> licenses and copyrighted by John Resig and the Dōjō
 Foundation, respectively.</p>
+<p>The hosting takes place at <a
+  href="http://github.com/Boldewyn/ebooks/">Github.com</a>. Their “pages” feature
+is great for purposes like this site.</p>
 </section>
 <section id="Help">
 <h2>How to Use This Site</h2>
