fix typos in Connecticut Yankee (seems that poems were OCRed erroneous)

--- a/A_Connecticut_Yankee.html
+++ b/A_Connecticut_Yankee.html
@@ -1361,36 +1361,36 @@ power to put him from it, I would not.</p>
 <h4>Local Smoke and Cinders.</h4>
 <p>Sir Launcelot met up with old King<br />
 Agrivance of Ireland unexpectedly last<br />
-weok over on the moor south of Sir<br />
+week over on the moor south of Sir<br />
 Balmoral le Merveilleuse’s hog dasture.<br />
 The widow has been notified.</p>
-<p>Expedition No. 3 will start adout the<br />
-first of mext month on a search f8r Sir<br />
+<p>Expedition No. 3 will start about the<br />
+first of next month on a search for Sir<br />
 Sagramour le Desirous. It is in com-<br />
 and of the renowned Knight of the Red<br />
 Lawns, assissted by Sir Persant of Inde,<br />
-who is compete9t. intelligent, courte-<br />
+who is competent, intelligent, courte-<br />
 ous, and in every way a brick, and fur-<br />
-tHer assisted by Sir Palamides the Sara-<br />
-cen, who is no huckleberry hinself.<br />
+ther assisted by Sir Palamides the Sara-<br />
+cen, who is no huckleberry himself.<br />
 This is no pic-nic, these boys mean<br />
 business.</p>
 <p>The readers of the Hosannah will re-<br />
-gret to learn that the hadndsome and<br />
+gret to learn that the handsome and<br />
 popular Sir Charolais of Gaul, who dur-<br />
 ing his four weeks’ stay at the Bull and<br />
 Halibut, this city, has won every heart<br />
 by his polished manners and elegant<br />
-cPnversation, will pUll out to-day for<br />
+conversation, will pull out to-day for<br />
 home. Give us another call, Charley!</p>
-<p>The bdsiness end of the funeral of<br />
+<p>The business end of the funeral of<br />
 the late Sir Dalliance the duke’s son of<br />
 Cornwall, killed in an encounter with<br />
 the Giant of the Knotted Bludgeon last<br />
 Tuesday on the borders of the Plain of<br />
 Enchantment was in the hands of the<br />
 ever affable and efficient Mumble,<br />
-prince of un3ertakers, then whom there<br />
+prince of undertakers, then whom there<br />
 exists none by whom it were a more<br />
 satisfying pleasure to have the last sad<br />
 offices performed. Give him a trial.</p>
@@ -1399,9 +1399,9 @@ office are due, from editor down to<br />
 devil, to the ever courteous and thought-<br />
 ful Lord High Stew d of the Palace’s<br />
 Third Assistant V t for several sau-<br />
-ceTs of ice crEam a quality calculated<br />
+ceTs of ice cream a quality calculated<br />
 to make the ey of the recipients hu-<br />
-mid with grt ude; and it done it.<br />
+mid with gratiude; and it done it.<br />
 When this administration wants to<br />
 chalk up a desirable name for early<br />
 promotion, the Hosannah would like a<br />
@@ -1411,7 +1411,7 @@ South Astolat, is visiting her uncle, the<br />
 popular host of the Cattlemen’s Board-<br />
 ing House, Liver Lane, this city.</p>
 <p>Young Barker the bellows-mender is<br />
-hoMe again, and looks much improved<br />
+home again, and looks much improved<br />
 by his vacation round-up among the out-<br />
 lying smithies. See his ad.</p>
 </blockquote>
