add JB and Dracula to index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <li><a href="A_Connecticut_Yankee.html">A Connecticut Yankee at King Arthur’s Court, <em>by Marc Twain</em></a></li>
 <li><a href="Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland, <em>by Lewis Carroll</em></a></li>
 <li><a href="At_the_Mountains_of_Madness.html">At the Mountains of Madness, <em>by H. P. Lovecraft</em></a></li>
+<li><a href="Dracula.html">Dracula, <em>by Bram Stoker</em></a></li>
 <li><a href="Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
 <li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
 <li><a href="New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
@@ -52,6 +53,7 @@
 <li><a href="The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward, <em>by H. P. Lovecraft</em></a></li>
 <li><a href="The_Happy_Prince_and_Other_Tales.html">The Happy Prince and Other Tales, <em>by Oscar Wilde</em></a></li>
 <li><a href="The_Invisible_Man.html">The Invisible Man, <em>by H. G. Wells</em></a></li>
+<li><a href="The_Jungle_Book.html">The Jungle Book, <em>by Rudyard Kipling</em></a></li>
 <li><a href="The_Picture_of_Dorian_Gray.html">The Picture of Dorian Gray, <em>by Oscar Wilde</em></a></li>
 <li><a href="The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.html">The Strange Case of Dr. Jekyll and Mr. Hyde, <em>by Robert Lewis Stevenson</em></a></li>
 <li><a href="The_Time_Machine.html">The Time Machine, <em>by H. G. Wells</em></a></li>
