--- a/Alices_Adventures_in_Wonderland.html
+++ b/Alices_Adventures_in_Wonderland.html
@@ -16,7 +16,7 @@
     <meta name="dc.issued"       content="1865-11-26" data-scheme="dc.W3CDTF" />
     <meta name="dc.language"     content="en-GB" data-scheme="dc.RFC4646" />
     <meta name="dc.spacial"      content="Wonderland" />
-    <meta name="dc.rights"       content="The stylesheet is © 2009 Manuel Strehl and is subject to the CreativeCommons Attribution-Share Alike 3.0 license (Germany). The text is in the public domain." />
+    <meta name="dc.rights"       content="Text and stylesheet are in the public domain. Third-party Javascript might come with different terms." />
     <link rel="dc.identifier"    href="http://www.manuel-strehl.de/ebooks/Alice%E2%80%99s%20Adventures%20in%20Wonderland" />
     <link rel="dc.tableofContents" href="#Table_of_Contents" />
     <link rel="dc.license"       href="http://creativecommons.org/licenses/publicdomain/" title="License" />
