--- a/The_Time_Machine.html
+++ b/The_Time_Machine.html
@@ -16,7 +16,7 @@
     <meta name="dc.issued"       content="1895" data-scheme="dc.W3CDTF" />
     <meta name="dc.language"     content="en-GB" data-scheme="dc.RFC4646" />
     <meta name="dc.temporal"     content="802701" data-scheme="dc.W3CDTF" />
-    <meta name="dc.rights"       content="The stylesheet is © 2009 Manuel Strehl and is subject to the CreativeCommons Attribution-Share Alike 3.0 license (Germany). The text is in the public domain." />
+    <meta name="dc.rights"       content="Text and stylesheet are in the public domain. Third-party Javascript might come with different terms." />
     <link rel="dc.identifier"    href="http://www.manuel-strehl.de/ebooks/The%20Time%20Machine" />
     <link rel="dc.tableofContents" href="#Table_of_Contents" />
     <link rel="dc.license"       href="http://creativecommons.org/licenses/publicdomain/" title="License" />
