--- a/Gullivers_Travels.html
+++ b/Gullivers_Travels.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-IE">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-IE" lang="en-IE">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -9864,7 +9864,7 @@ truth; neither indeed can I be ever under the least temptation to
 vary from it, while I retain in my mind the lectures and example
 of my noble master and the other illustrious <em>Houyhnhnms</em> of
 whom I had so long the honour to be an humble hearer.</p>
-<blockquote xml:lang="la">
+<blockquote xml:lang="la" lang="la">
 <p><em>—Nec si miserum Fortuna Sinonem</em><br />
 <em>Finxit</em>, <em>vanum etiam</em>, <em>mendacemque improba finget</em>.</p>
 </blockquote>
