--- a/Siddhartha.html
+++ b/Siddhartha.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de-DE">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de-DE" lang="de-DE">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -39,7 +39,7 @@
 <h1>Siddhartha</h1>
 <h2 class="subtitle">Eine indische Dichtung</h2>
 <h2 class="author">Hermann Hesse</h2>
-<p>in der Ausgabe von <a href="http://www.gutenberg.org/etext/2499">Projekt Gutenberg</a>.<br/>Übertragen in gültiges <abbr xml:lang="en" title="Extensible Hyptertext Markup Language">XHTML</abbr>&#xA0;1.1 und mit <abbr xml:lang="en" title="Cascading Stylesheets">CSS</abbr>&#xA0;3 aufgehübscht von Manuel Strehl, 2009.</p>
+<p>in der Ausgabe von <a href="http://www.gutenberg.org/etext/2499">Projekt Gutenberg</a>.<br/>Übertragen in gültiges <abbr xml:lang="en" lang="en" title="Hyptertext Markup Language">HTML</abbr>5 und mit <abbr xml:lang="en" lang="en" title="Cascading Stylesheets">CSS</abbr>&#xA0;3 aufgehübscht von Manuel Strehl, 2009.</p>
 </header>
 <section id="Table_of_Contents">
 <h2>Inhalt</h2>
