--- a/The_Adventures_of_Sherlock_Holmes.html
+++ b/The_Adventures_of_Sherlock_Holmes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -43,7 +43,7 @@
 <header>
 <h1>The Adventures of Sherlock Holmes</h1>
 <h2 class="author">Sir Arthur Conan Doyle</h2>
-<p>in the edition of <a href="http://www.gutenberg.org/etext/1661">Project Gutenberg</a>, converted to valid <abbr title="Extensible Hyptertext Markup Language">XHTML</abbr>&#xA0;1.1 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
+<p>in the edition of <a href="http://www.gutenberg.org/etext/1661">Project Gutenberg</a>, converted to valid <abbr title="Hypertext Markup Language">HTML</abbr>5 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
 </header>
 <section id="Table_of_Contents">
 <h2>Contents</h2>
@@ -212,9 +212,9 @@ large “G” with a small “t” woven into the texture of the paper.</p>
 <p>“What do you make of that?” asked Holmes.</p>
 <p>“The name of the maker, no doubt; or his monogram, rather.”</p>
 <p>“Not at all. The ‘G’ with the small ‘t’ stands for
-‘<span xml:lang="de">Gesellschaft</span>,’ which is the German for ‘Company.’ It is a
+‘<span xml:lang="de" lang="de">Gesellschaft</span>,’ which is the German for ‘Company.’ It is a
 customary contraction like our ‘Co.’ ‘P,’ of course, stands for
-‘<span xml:lang="de">Papier</span>.’ Now for the ‘Eg.’ Let us glance at our Continental
+‘<span xml:lang="de" lang="de">Papier</span>.’ Now for the ‘Eg.’ Let us glance at our Continental
 Gazetteer.” He took down a heavy brown volume from his shelves.
 “Eglow, Eglonitz—here we are, Egria. It is in a German-speaking
 country—in Bohemia, not far from Carlsbad. ‘Remarkable as being
@@ -1048,7 +1048,7 @@ becomes even more simple.”</p>
 thought at first that you had done something clever, but I see
 that there was nothing in it after all.”</p>
 <p>“I begin to think, Watson,” said Holmes, “that I make a mistake
-in explaining. ‘<em xml:lang="la">Omne ignotum pro magnifico</em>,’ you know, and my
+in explaining. ‘<em xml:lang="la" lang="la">Omne ignotum pro magnifico</em>,’ you know, and my
 poor little reputation, such as it is, will suffer shipwreck if I
 am so candid. Can you not find the advertisement, Mr. Wilson?”</p>
 <p>“Yes, I have got it now,” he answered with his thick red finger
@@ -1665,7 +1665,7 @@ hour matters will come to a head. In the meantime Mr.
 Merryweather, we must put the screen over that dark lantern.”</p>
 <p>“And sit in the dark?”</p>
 <p>“I am afraid so. I had brought a pack of cards in my pocket, and
-I thought that, as we were a <em xml:lang="fr">partie carrée</em>, you might have your
+I thought that, as we were a <em xml:lang="fr" lang="fr">partie carrée</em>, you might have your
 rubber after all. But I see that the enemy’s preparations have
 gone so far that we cannot risk the presence of a light. And,
 first of all, we must choose our positions. These are daring men,
@@ -1826,7 +1826,7 @@ to escape from the commonplaces of existence. These little
 problems help me to do so.”</p>
 <p>“And you are a benefactor of the race,” said I.</p>
 <p>He shrugged his shoulders. “Well, perhaps, after all, it is of
-some little use,” he remarked. “ ‘<em xml:lang="fr">L’homme c’est rien—l’oeuvre
+some little use,” he remarked. “ ‘<em xml:lang="fr" lang="fr">L’homme c’est rien—l’oeuvre
 c’est tout</em>,’ as Gustave Flaubert wrote to George Sand.”</p>
 </section>
 <section id="a_case_of_identity">
@@ -1840,7 +1840,7 @@ hand in hand, hover over this great city, gently remove the
 roofs, and peep in at the queer things which are going on, the
 strange coincidences, the plannings, the cross-purposes, the
 wonderful chains of events, working through generations, and
-leading to the most <em xml:lang="fr">outré</em> results, it would make all fiction with
+leading to the most <em xml:lang="fr" lang="fr">outré</em> results, it would make all fiction with
 its conventionalities and foreseen conclusions most stale and
 unprofitable.”</p>
 <p>“And yet I am not convinced of it,” I answered. “The cases which
@@ -1917,7 +1917,7 @@ the bank, she hurried across the road, and we heard the sharp
 clang of the bell.</p>
 <p>“I have seen those symptoms before,” said Holmes, throwing his
 cigarette into the fire. “Oscillation upon the pavement always
-means an <em xml:lang="fr">affaire de coeur</em>. She would like advice, but is not sure
+means an <em xml:lang="fr" lang="fr">affaire de coeur</em>. She would like advice, but is not sure
 that the matter is not too delicate for communication. And yet
 even here we may discriminate. When a woman has been seriously
 wronged by a man she no longer oscillates, and the usual symptom
@@ -2290,7 +2290,7 @@ attention at the time, and the whole of next day I was busy at
 the bedside of the sufferer. It was not until close upon six
 o’clock that I found myself free and was able to spring into a
 hansom and drive to Baker Street, half afraid that I might be too
-late to assist at the <em xml:lang="fr">dénouement</em> of the little mystery. I found
+late to assist at the <em xml:lang="fr" lang="fr">dénouement</em> of the little mystery. I found
 Sherlock Holmes alone, however, half asleep, with his long, thin
 form curled up in the recesses of his armchair. A formidable
 array of bottles and test-tubes, with the pungent cleanly smell
@@ -2485,7 +2485,7 @@ reply was typewritten and revealed the same trivial but
 characteristic defects. The same post brought me a letter from
 Westhouse &amp; Marbank, of Fenchurch Street, to say that the
 description tallied in every respect with that of their employé,
-James Windibank. <em xml:lang="fr">Voilà tout</em>!”</p>
+James Windibank. <em xml:lang="fr" lang="fr">Voilà tout</em>!”</p>
 <p>“And Miss Sutherland?”</p>
 <p>“If I tell her she will not believe me. You may remember the old
 Persian saying, ‘There is danger for him who taketh the tiger
@@ -2655,7 +2655,7 @@ jaw, it is surely very clear that that side is less illuminated
 than the other. I could not imagine a man of your habits looking
 at himself in an equal light and being satisfied with such a
 result. I only quote this as a trivial example of observation and
-inference. Therein lies my <em xml:lang="fr">métier</em>, and it is just possible that
+inference. Therein lies my <em xml:lang="fr" lang="fr">métier</em>, and it is just possible that
 it may be of some service in the investigation which lies before
 us. There are one or two minor points which were brought out in
 the inquest, and which are worth considering.”</p>
@@ -2798,7 +2798,7 @@ young man’s favour. Don’t you see that you alternately give him
 credit for having too much imagination and too little? Too
 little, if he could not invent a cause of quarrel which would
 give him the sympathy of the jury; too much, if he evolved from
-his own inner consciousness anything so <em xml:lang="fr">outré</em> as a dying
+his own inner consciousness anything so <em xml:lang="fr" lang="fr">outré</em> as a dying
 reference to a rat, and the incident of the vanishing cloth. No,
 sir, I shall approach this case from the point of view that what
 this young man says is true, and we shall see whither that
@@ -3150,7 +3150,7 @@ enough to aid us in our search.”</p>
 <p>Lestrade laughed. “I am afraid that I am still a sceptic,” he
 said. “Theories are all very well, but we have to deal with a
 hard-headed British jury.”</p>
-<p>“<em xml:lang="fr">Nous verrons</em>,” answered Holmes calmly. “You work your own
+<p>“<em xml:lang="fr" lang="fr">Nous verrons</em>,” answered Holmes calmly. “You work your own
 method, and I shall work mine. I shall be busy this afternoon,
 and shall probably return to London by the evening train.”</p>
 <p>“And leave your case unfinished?”</p>
@@ -5384,7 +5384,7 @@ relief.</p>
 your own bird, so if you wish—”</p>
 <p>The man burst into a hearty laugh. “They might be useful to me as
 relics of my adventure,” said he, “but beyond that I can hardly
-see what use the <em xml:lang="la">disjecta membra</em> of my late acquaintance are
+see what use the <em xml:lang="la" lang="la">disjecta membra</em> of my late acquaintance are
 going to be to me. No, sir, I think that, with your permission, I
 will confine my attentions to the excellent bird which I perceive
 upon the sideboard.”</p>
@@ -6738,7 +6738,7 @@ gave my friend fewer openings for those deductive methods of
 reasoning by which he achieved such remarkable results. The story
 has, I believe, been told more than once in the newspapers, but,
 like all such narratives, its effect is much less striking when
-set forth <em xml:lang="fr">en bloc</em> in a single half-column of print than when the
+set forth <em xml:lang="fr" lang="fr">en bloc</em> in a single half-column of print than when the
 facts slowly evolve before your own eyes, and the mystery clears
 gradually away as each new discovery furnishes a step which leads
 on to the complete truth. At the time the circumstances made a
@@ -7373,7 +7373,7 @@ appeared in all the papers about a year ago. Listen to this:
 ‘Lost, on the 9th inst., Mr. Jeremiah Hayling, aged
 twenty-six, a hydraulic engineer. Left his lodgings at ten
 o’clock at night, and has not been heard of since. Was
-dressed in,’ <abbr title="et cetera" xml:lang="la">etc.</abbr>, <abbr title="et cetera" xml:lang="la">etc.</abbr> Ha! That represents the last time that
+dressed in,’ <abbr title="et cetera" xml:lang="la" lang="la">etc.</abbr>, <abbr title="et cetera" xml:lang="la" lang="la">etc.</abbr> Ha! That represents the last time that
 the colonel needed to have his machine overhauled, I fancy.”</p>
 <p>“Good heavens!” cried my patient. “Then that explains what the
 girl said.”</p>
@@ -7722,7 +7722,7 @@ a suggestive one.”</p>
 <p>“And it is—”</p>
 <p>“That Miss Flora Millar, the lady who had caused the disturbance,
 has actually been arrested. It appears that she was formerly a
-<em xml:lang="fr">danseuse</em> at the Allegro, and that she has known the bridegroom
+<em xml:lang="fr" lang="fr">danseuse</em> at the Allegro, and that she has known the bridegroom
 for some years. There are no further particulars, and the whole
 case is in your hands now—so far as it has been set forth in the
 public press.”</p>
@@ -7822,7 +7822,7 @@ married her.”</p>
 <p>“She brought, I understand, a considerable dowry?”</p>
 <p>“A fair dowry. Not more than is usual in my family.”</p>
 <p>“And this, of course, remains to you, since the marriage is a
-<em xml:lang="fr">fait accompli</em>?”</p>
+<em xml:lang="fr" lang="fr">fait accompli</em>?”</p>
 <p>“I really have made no inquiries on the subject.”</p>
 <p>“Very naturally not. Did you see Miss Doran on the day before the
 wedding?”</p>
@@ -8068,7 +8068,7 @@ with the help of a youth whom he had brought with him, and
 presently, to my very great astonishment, a quite epicurean
 little cold supper began to be laid out upon our humble
 lodging-house mahogany. There were a couple of brace of cold
-woodcock, a pheasant, a <em xml:lang="fr">pâté de foie gras</em> pie with a group of
+woodcock, a pheasant, a <em xml:lang="fr" lang="fr">pâté de foie gras</em> pie with a group of
 ancient and cobwebby bottles. Having laid out all these luxuries,
 my two visitors vanished away, like the genii of the Arabian
 Nights, with no explanation save that the things had been paid
@@ -8917,7 +8917,7 @@ cried. “And my son? You give me hopes?”</p>
 acted in my house last night?”</p>
 <p>“If you can call upon me at my Baker Street rooms to-morrow
 morning between nine and ten I shall be happy to do what I can to
-make it clearer. I understand that you give me <em xml:lang="fr">carte blanche</em> to
+make it clearer. I understand that you give me <em xml:lang="fr" lang="fr">carte blanche</em> to
 act for you, provided only that I get back the gems, and that you
 place no limit on the sum I may draw.”</p>
 <p>“I would give my fortune to have them back.”</p>
@@ -9239,7 +9239,7 @@ pleasant to me to observe, Watson, that you have so far grasped
 this truth that in these little records of our cases which you
 have been good enough to draw up, and, I am bound to say,
 occasionally to embellish, you have given prominence not so much
-to the many <em xml:lang="fr">causes célèbres</em> and sensational trials in which I
+to the many <em xml:lang="fr" lang="fr">causes célèbres</em> and sensational trials in which I
 have figured but rather to those incidents which may have been
 trivial in themselves, but which have given room for those
 faculties of deduction and of logical synthesis which I have made
@@ -9745,7 +9745,7 @@ the nursery.</p>
 <p>“Two days later this same performance was gone through under
 exactly similar circumstances. Again I changed my dress, again I
 sat in the window, and again I laughed very heartily at the funny
-stories of which my employer had an immense <em xml:lang="fr">répertoire</em>, and which
+stories of which my employer had an immense <em xml:lang="fr" lang="fr">répertoire</em>, and which
 he told inimitably. Then he handed me a yellow-backed novel, and
 moving my chair a little sideways, that my own shadow might not
 fall upon the page, he begged me to read aloud to him. I read for
@@ -10003,7 +10003,7 @@ figure, and the colour of your hair. Hers had been cut off, very
 possibly in some illness through which she has passed, and so, of
 course, yours had to be sacrificed also. By a curious chance you
 came upon her tresses. The man in the road was undoubtedly some
-friend of hers—possibly her <em xml:lang="fr">fiancé</em>—and no doubt, as you wore
+friend of hers—possibly her <em xml:lang="fr" lang="fr">fiancé</em>—and no doubt, as you wore
 the girl’s dress and were so like her, he was convinced from your
 laughter, whenever he saw you, and afterwards from your gesture,
 that Miss Rucastle was perfectly happy, and that she no longer
@@ -10158,7 +10158,7 @@ when your master had gone out.”</p>
 you have certainly cleared up everything which puzzled us. And
 here comes the country surgeon and Mrs. Rucastle, so I think,
 Watson, that we had best escort Miss Hunter back to Winchester,
-as it seems to me that our <em xml:lang="la">locus standi</em> now is rather a
+as it seems to me that our <em xml:lang="la" lang="la">locus standi</em> now is rather a
 questionable one.”</p>
 <p>And thus was solved the mystery of the sinister house with the
 copper beeches in front of the door. Mr. Rucastle survived, but
