--- a/The_Call_of_Cthulhu.html
+++ b/The_Call_of_Cthulhu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -43,7 +43,7 @@
 <header>
 <h1>The Call of Cthulhu</h1>
 <h2 class="author"><abbr title="Howard Phillips">H. P.</abbr> Lovecraft</h2>
-<p>in the edition of <a href="http://en.wikisource.org/wiki/The_Call_of_Cthulhu">WikiSource</a>, converted to valid <abbr title="Extensible Hyptertext Markup Language">XHTML</abbr>&#xA0;1.1 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
+<p>in the edition of <a href="http://en.wikisource.org/wiki/The_Call_of_Cthulhu">WikiSource</a>, converted to valid <abbr title="Hypertext Markup Language">HTML</abbr>5 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
 </header>
 <section class="preface">
 <p>(Found Among the Papers of the Late Francis Wayland Thurston, of Boston)</p>
