--- a/The_Invisible_Man.html
+++ b/The_Invisible_Man.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -43,7 +43,7 @@
 <header>
 <h1>The Invisible Man</h1>
 <h2 class="author"><abbr title="Herbert George">H. G.</abbr> Wells</h2>
-<p>in the edition of <a href="http://en.wikisource.org/wiki/The_Invisible_Man">WikiSource</a>, converted to valid <abbr title="Extensible Hyptertext Markup Language">XHTML</abbr>&#xA0;1.1 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
+<p>in the edition of <a href="http://en.wikisource.org/wiki/The_Invisible_Man">WikiSource</a>, converted to valid <abbr title="Hypertext Markup Language">HTML</abbr>5 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
 </header>
 <section id="Table_of_Contents">
 <h2>Contents</h2>
@@ -82,7 +82,7 @@
 <section id="The_Strange_Man.27s_Arrival">
 <h2>The Strange Man’s Arrival</h2>
 <p>The stranger came early in February, one wintry day, through a biting wind and a driving snow, the last snowfall of the year, over the down, walking as it seemed from Bramblehurst railway station, and carrying a little black portmanteau in his thickly gloved hand. He was wrapped up from head to foot, and the brim of his soft felt hat hid every inch of his face but the shiny tip of his nose; the snow had piled itself against his shoulders and chest, and added a white crest to the burden he carried. He staggered into the Coarch and Horses, more dead than alive as it seemed, and flung his portmanteau down. “A fire,” he cried, “in the name of human charity! A room and a fire!” He stamped and shook the snow from off himself in the bar, and followed Mrs. Hall into her guest parlour to strike his bargain. And with that much introduction, that and a ready acquiescence to terms and a couple of sovereigns flung upon the table, he took up his quarters in the inn.</p>
-<p>Mrs. Hall lit the fire and left him there while she went to prepare him a meal with her own hands. A guest to stop at Iping in the wintertime was an unheard-of piece of luck, let alone a guest who was no “haggler,” and she was resolved to show herself worthy of her good fortune. As soon as the bacon was well under way, and Millie, her lymphatic aid, had been been brisked up a bit by a few deftly chosen expressions of contempt, she carried the cloth, plates, and classes into the parlour and began to lay them with the utmost <em xml:lang="fr">éclat</em>. Although the fire was burning up briskly, she was surprised to see that her visitor still wore his hat and coat, standing with his back to her and staring out of the window at the falling snow in the yard. His gloved hands were clasped behind him, and he seemed to be lost in thought. She noticed that the melted snow that still sprinkled his shoulders dripped upon her carpet. “Can I take your hat and coat, sir,” she said, “and give them a good dry in the kitchen?”</p>
+<p>Mrs. Hall lit the fire and left him there while she went to prepare him a meal with her own hands. A guest to stop at Iping in the wintertime was an unheard-of piece of luck, let alone a guest who was no “haggler,” and she was resolved to show herself worthy of her good fortune. As soon as the bacon was well under way, and Millie, her lymphatic aid, had been been brisked up a bit by a few deftly chosen expressions of contempt, she carried the cloth, plates, and classes into the parlour and began to lay them with the utmost <em xml:lang="fr" lang="fr">éclat</em>. Although the fire was burning up briskly, she was surprised to see that her visitor still wore his hat and coat, standing with his back to her and staring out of the window at the falling snow in the yard. His gloved hands were clasped behind him, and he seemed to be lost in thought. She noticed that the melted snow that still sprinkled his shoulders dripped upon her carpet. “Can I take your hat and coat, sir,” she said, “and give them a good dry in the kitchen?”</p>
 <p>“No,” he said without turning.</p>
 <p>She was not sure she had heard him, and was about to repeat her question.</p>
 <p>He turned his head and looked at her over his shoulder. “I prefer to keep them on,” he said with emphasis, and she noticed that he wore big blue spectacles with side-lights, and had a bushy side-whisker over his coatcollar that completely hid his cheeks and face.</p>
