--- a/The_Time_Machine.html
+++ b/The_Time_Machine.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -38,7 +38,7 @@
 <header>
 <h1>The Time Machine</h1>
 <h2 class="author"><abbr title="Herbert George">H. G.</abbr> Wells</h2>
-<p>in the edition of <a href="http://en.wikisource.org/wiki/The_Time_Machine">WikiSource</a>, converted to valid <abbr title="Extensible Hyptertext Markup Language">XHTML</abbr>&#xA0;1.1 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
+<p>in the edition of <a href="http://en.wikisource.org/wiki/The_Time_Machine">WikiSource</a>, converted to valid <abbr title="Hypertext Markup Language">HTML</abbr>5 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
 </header>
 <section id="Table_of_Contents">
 <h2>Contents</h2>
@@ -63,7 +63,7 @@
 <p>The Time Traveller (for so it will be convenient to speak of him) was expounding a recondite matter to us. His grey eyes shone and twinkled, and his usually pale face was flushed and animated. The fire burned brightly, and the soft radiance of the incandescent lights in the lilies of silver caught the bubbles that flashed and passed in our glasses. Our chairs, being his patents, embraced and caressed us rather than submitted to be sat upon, and there was that luxurious after-dinner atmosphere when thought roams gracefully free of the trammels of precision. And he put it to us in this way—marking the points with a lean forefinger—as we sat and lazily admired his earnestness over this new paradox (as we thought it) and his fecundity.</p>
 <p>‘You must follow me carefully. I shall have to controvert one or two ideas that are almost universally accepted. The geometry, for instance, they taught you at school is founded on a misconception.’</p>
 <p>‘Is not that rather a large thing to expect us to begin upon?’ said Filby, an argumentative person with red hair.</p>
-<p>‘I do not mean to ask you to accept anything without reasonable ground for it. You will soon admit as much as I need from you. You know of course that a mathematical line, a line of thickness <em xml:lang="la">nil</em>, has no real existence. They taught you that? Neither has a mathematical plane. These things are mere abstractions.’</p>
+<p>‘I do not mean to ask you to accept anything without reasonable ground for it. You will soon admit as much as I need from you. You know of course that a mathematical line, a line of thickness <em xml:lang="la" lang="la">nil</em>, has no real existence. They taught you that? Neither has a mathematical plane. These things are mere abstractions.’</p>
 <p>‘That is all right,’ said the Psychologist.</p>
 <p>‘Nor, having only length, breadth, and thickness, can a cube have a real existence.’</p>
 <p>‘There I object,’ said Filby. ‘Of course a solid body may exist. All real things—’</p>
