--- a/The_War_of_the_Worlds.html
+++ b/The_War_of_the_Worlds.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -38,7 +38,7 @@
 <header>
 <h1>The War of the Worlds</h1>
 <h2 class="author"><abbr title="Herbert George">H. G.</abbr> Wells</h2>
-<p>in the edition of <a href="http://en.wikisource.org/wiki/The_War_of_the_Worlds">WikiSource</a>, converted to valid <abbr title="Extensible Hyptertext Markup Language">XHTML</abbr>&#xA0;1.1 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
+<p>in the edition of <a href="http://en.wikisource.org/wiki/The_War_of_the_Worlds">WikiSource</a>, converted to valid <abbr title="Hypertext Markup Language">HTML</abbr>5 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
 </header>
 <section class="preface">
 <blockquote>
@@ -565,7 +565,7 @@ And how are all things made for man?
 <p>Unable from his window to learn what was happening, my brother went down and out into the street, just as the sky between the parapets of the houses grew pink with the early dawn. The flying people on foot and in vehicles grew more numerous every moment. “Black Smoke!” he heard people crying, and again “Black Smoke!” The contagion of such a unanimous fear was inevitable. As my brother hesitated on the door-step, he saw another news vender approaching, and got a paper forthwith. The man was running away with the rest, and selling his papers for a shilling each as he ran—a grotesque mingling of profit and panic.</p>
 <p>And from this paper my brother read that catastrophic dispatch of the Commander-in-Chief:</p>
 <p>“The Martians are able to discharge enormous clouds of a black and poisonous vapour by means of rockets. They have smothered our batteries, destroyed Richmond, Kingston, and Wimbledon, and are advancing slowly towards London, destroying everything on the way. It is impossible to stop them. There is no safety from the Black Smoke but in instant flight.”</p>
-<p>That was all, but it was enough. The whole population of the great six-million city was stirring, slipping, running; presently it would be pouring <strong xml:lang="fr">en masse</strong> northward.</p>
+<p>That was all, but it was enough. The whole population of the great six-million city was stirring, slipping, running; presently it would be pouring <strong xml:lang="fr" lang="fr">en masse</strong> northward.</p>
 <p>“Black Smoke!” the voices cried. “Fire!”</p>
 <p>The bells of the neighbouring church made a jangling tumult, a cart carelessly driven smashed, amid shrieks and curses, against the water trough up the street. Sickly yellow lights went to and fro in the houses, and some of the passing cabs flaunted unextinguished lamps. And overhead the dawn was growing brighter, clear and steady and calm.</p>
 <p>He heard footsteps running to and fro in the rooms, and up and down stairs behind him. His landlady came to the door, loosely wrapped in dressing gown and shawl; her husband followed ejaculating.</p>
