--- a/Treasure_Island.html
+++ b/Treasure_Island.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -46,7 +46,7 @@
 <header>
 <h1>Treasure Island</h1>
 <h2 class="author">Robert Louis Stevenson</h2>
-<p>in the edition of <a href="http://www.gutenberg.org/etext/120">Project Gutenberg</a>, converted to valid <abbr title="Extensible Hyptertext Markup Language">XHTML</abbr>&#xA0;1.1 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
+<p>in the edition of <a href="http://www.gutenberg.org/etext/120">Project Gutenberg</a>, converted to valid <abbr title="Hypertext Markup Language">HTML</abbr>5 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
 </section>
 <section id="Table_of_Contents">
 <h2>Contents</h2>
